force-app/main/default/objects/Apttus__FileSplit__c/Apttus__FileSplit__c.object-meta.xml
<CustomObject>
    <description>Contains information of files split from a large file</description>
    <label>File Split</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>