force-app/main/default/objects/Apttus__FileSplit__c/fields/Apttus__OriginalFileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__OriginalFileId__c</fullName>
    <description>ID of the original file</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the original file</inlineHelpText>
    <label>Original File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>