force-app/main/default/objects/Apttus__FileSplit__c/fields/Apttus__PrimaryObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PrimaryObjectId__c</fullName>
    <description>ID of the primary object associated with the File</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the primary object associated with the File</inlineHelpText>
    <label>Primary Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>