force-app/main/default/objects/Apttus__FileSplit__c/fields/Apttus__PrimaryObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PrimaryObjectType__c</fullName>
    <description>Primary object associated with the File</description>
    <inlineHelpText>Primary object associated with the File</inlineHelpText>
    <label>Primary Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>