force-app/main/default/objects/Apttus__FileSplit__c/fields/Apttus__SplitFileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SplitFileId__c</fullName>
    <description>ID of the split file in File object</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the split file in File object</inlineHelpText>
    <label>Split File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>